added profile and stable version for the app

--- a/index.html
+++ b/index.html
@@ -1,3 +1,5 @@
 Download page
 
-<a href="itms-services://?action=download-manifest&url=http://hesenrre.github.com/hotels/app.plist">Dwonload app</a>
+<a href="http://hesenrre.github.com/hotels/My_IOS_Devs.mobileprovision">Mobile Provision</a>
+
+<a href="itms-services://?action=download-manifest&url=http://hesenrre.github.com/hotels/app.plist">Download app</a>
