--- a/index.html
+++ b/index.html
@@ -1,5 +1,10 @@
 Download page
-
-<a href="http://hesenrre.github.com/hotels/My_IOS_Devs.mobileprovision">Mobile Provision</a>
-
-<a href="itms-services://?action=download-manifest&url=http://hesenrre.github.com/hotels/app.plist">Download app</a>
+<br>
+<ul>
+  <li> Primero dale click a esta liga: 
+	<a href="http://hesenrre.github.com/hotels/My_IOS_Devs.mobileprovision">Mobile Provision</a>
+  </li>
+  <li> Despues a esta
+  <a href="itms-services://?action=download-manifest&url=http://hesenrre.github.com/hotels/app.plist">Install Demo</a>
+  </li>
+</ul>
