--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@ Download page
 <br>
 <ul>
   <li> Primero dale click a esta liga: 
-	<a href="http://hesenrre.github.com/hotels/My_IOS_Devs.mobileprovision">Mobile Provision</a>
+	<a href="http://hesenrre.github.com/hotels/iPhone_Testings.mobileprovision">Mobile Provision</a>
   </li>
   <li> Despues a esta
   <a href="itms-services://?action=download-manifest&url=http://hesenrre.github.com/hotels/app.plist">Install Demo</a>
